Adjusted registry handling