@@ -7,8 +7,9 @@ import org.jetbrains.annotations.Nullable;
 import org.lushplugins.lushlib.command.SubCommand;
 import org.lushplugins.lushlib.libraries.chatcolor.ChatColorHandler;
 import org.lushplugins.regrowthsmp.RegrowthSMP;
-import org.lushplugins.regrowthsmp.module.ModuleType;
+import org.lushplugins.regrowthsmp.common.module.Module;
 
+import java.util.ArrayList;
 import java.util.List;
 
 public class ReloadCommand extends SubCommand {
@@ -23,12 +24,13 @@ public class ReloadCommand extends SubCommand {
         RegrowthSMP.getInstance().getConfigManager().reload();
 
         if (args.length != 0) {
-            try {
-                ModuleType moduleType = ModuleType.valueOf(args[0].toUpperCase());
-                RegrowthSMP.getInstance().getModuleManager().getModule(moduleType).reload();
-                ChatColorHandler.sendMessage(sender, String.format("&#b7faa2RegrowthSMP has successfully reloaded &#66b04f%s 🔃", moduleType.name().toLowerCase()));
-            } catch (IllegalArgumentException e) {
-                ChatColorHandler.sendMessage(sender, "&#ff6969RegrowthSMP has failed to reload");
+            String moduleId = args[0].toLowerCase();
+            Module module =  RegrowthSMP.getInstance().getModuleManager().getModule(moduleId);
+            if (module != null) {
+                module.reload();
+                ChatColorHandler.sendMessage(sender, "&#b7faa2RegrowthSMP has successfully reloaded &#66b04f%s 🔃".formatted(moduleId));
+            } else {
+                ChatColorHandler.sendMessage(sender, "&#ff6969Failed to find module &#d13636%s".formatted(moduleId));
             }
         } else {
             ChatColorHandler.sendMessage(sender, "&#b7faa2RegrowthSMP has been reloaded &#66b04f🔃");
@@ -40,9 +42,7 @@ public class ReloadCommand extends SubCommand {
     @Override
     public @Nullable List<String> tabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args, @NotNull String[] fullArgs) {
         if (args.length == 1) {
-            return RegrowthSMP.getInstance().getModuleManager().getModuleTypes().stream()
-                .map(moduleType -> moduleType.name().toLowerCase())
-                .toList();
+            return new ArrayList<>(RegrowthSMP.getInstance().getModuleManager().getModuleTypes());
         } else {
             return null;
         }
